[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/EndSceneTransition.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sfx/heartbeat_double/heartbeat1.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/body_fall/417994__suburbanwizard__body-fall.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Modules/Rendering/Courtain.tscn" type="PackedScene" id=4]

[node name="EndSceneTransition" type="Node2D"]
script = ExtResource( 1 )

[node name="HeartBeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BodyFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Courtain" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" parent="Courtain" index="0"]
layer = 120
[connection signal="finished" from="HeartBeat" to="." method="_on_AudioStreamPlayer_finished"]

[editable path="Courtain"]
